examples/wgsl/tests/data/missing_comma.diag
error: invalid syntax, expected one of: ',', '}'
  ┌─ <input>:3:3
  │
3 │   b: u32,
  │   ^

