examples/wgsl/tests/data/missing_comma.wgsl
struct Foo {
  a: u32
  b: u32,
  c: u32
}
